Fix preview for html files beeing too small and restrictive
Allow forms and scripts in iframe sandbox
Default to a larger preview for images and html pages

--- a/src/app/components/data-preview/data-preview.component.sass
+++ b/src/app/components/data-preview/data-preview.component.sass
@@ -7,3 +7,9 @@
     min-height: 10rem
     max-height: 80vh
     height: max-content
+
+.preview-frame.large-content
+    min-height: max(40rem, 60vh)
+
+.preview-image.large-content
+    min-height: max(40rem, 60vh)
